// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Component should handle variant loader components: variant: chart 1`] = `
<div
  className="curiosity-skeleton-container curiosity-skeleton-container-chart"
>
  <Skeleton
    size="lg"
  />
  <Skeleton
    size="md"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: default 1`] = `<Spinner />`;

exports[`Loader Component should handle variant loader components: variant: graph 1`] = `
<div
  className="curiosity-skeleton-container curiosity-skeleton-container-chart"
>
  <Skeleton
    size="lg"
  />
  <Skeleton
    size="md"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: paragraph 1`] = `
<div
  className="curiosity-skeleton-container"
>
  <Skeleton
    size="xs"
  />
  <Skeleton
    size="sm"
  />
  <Skeleton
    size="md"
  />
  <Skeleton
    size="lg"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: skeleton 1`] = `
<Skeleton
  size="sm"
/>
`;

exports[`Loader Component should handle variant loader components: variant: spinner 1`] = `<Spinner />`;

exports[`Loader Component should handle variant loader components: variant: table 1`] = `
<TableSkeleton
  ariaLabel={null}
  borders={true}
  className={null}
  colCount={1}
  colWidth={[]}
  isHeader={false}
  rowCount={5}
  summary={null}
  variant={null}
/>
`;

exports[`Loader Component should handle variant loader components: variant: title 1`] = `
<PageLayout
  className=""
>
  <PageHeader
    productLabel={null}
    t={[Function]}
  >
    <Skeleton
      size="sm"
    />
  </PageHeader>
</PageLayout>
`;

exports[`Loader Component should render a basic component: basic 1`] = `<Spinner />`;
